--- a/app.html
+++ b/app.html
@@ -131,11 +131,11 @@
                         </button>
                     </form>
                     <div
-                        class="alert alert-success mt-3 invisible"
+                        class="alert mt-3 invisible"
                         id="alert"
                         role="alert"
                     >
-                        <h2 class="alert-heading">Nice Work!</h2>
+                        <h2 class="alert-heading"></h2>
                         <p id="msg">
                             <!-- Reversed Message goes Here -->
                         </p>
