--- a/app.html
+++ b/app.html
@@ -125,7 +125,7 @@
                         <button
                             type="button"
                             id="btnSubmit"
-                            class="my-3 btn btn-primary"
+                            class="my-3 btn btn-dark"
                         >
                             Flip it!
                         </button>
