updated code descriptions

--- a/app.html
+++ b/app.html
@@ -102,12 +102,11 @@
                         A Coding Challenge
                     </h2>
                     <p>
-                        Word Play: A palindrome game to make up words that can be read forwards and backwards. Write a program to
-                        display the user's input in reverse and can be read the same way.
+                        My goal is to create a web page where you can enter a phrase, and this small web app will tell you whether that phrase is a palindrome or not. A palindrome is a word, phrase, or sequence that reads the same forwards and backward (ignoring spaces, punctuation, and letter case).
                     </p>
                     <p>
                         To begin, enter a message in the input box and press the
-                        button to display in reverse
+                        button to display in reverse.
                     </p>
                 </div>
                 <div class="col">
