--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <h2 class="display-6 fw-bold mt-3">Word Play</h2>
                     <h2 class="display-6">A Coding Challenge</h2>
                     <div class="lead">
-                        Your project description goes here - CHANGE ME
+                        My goal is to create a web page where you can enter a phrase, and this small web app will tell you whether that phrase is a palindrome or not. A palindrome is a word, phrase, or sequence that reads the same forwards and backward (ignoring spaces, punctuation, and letter case).
                     </div>
                     <div class="d-flex justify-content-center">
                         <ul class="list-unstyled text-start">
