--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                     href="/img/favicon.ico"
                     type="image/x-icon"
                 />
-                <div class="col order-md-last">
+                <div class="col order-md-last text-center bg-dark-subtle rounded-5">
                     <img
                         class="img-fluid app-logo"
-                        src="/img/APPNAMELogo.svg"
+                        src="/img/3.svg"
                         alt=""
                     />
                 </div>
