--- a/app.html
+++ b/app.html
@@ -94,7 +94,7 @@
             </div>
         </nav>
 
-        <main class="container">
+        <main class="container py-3">
             <div class="row row-cols-1 row-cols-md-2">
                 <div class="col">
                     <h1 class="display-5 fw-bold">Word Play</h1>
@@ -109,7 +109,7 @@
                         button to display in reverse.
                     </p>
                 </div>
-                <div class="col">
+                <div class="col d-flex align-items-center">
                     <form action="#">
                         <label for="userInput" class="form-label fw-bold"
                             >Type in a word to see if it can be read the same in reverse.</label
